# scraper

./: .gitignore  hook  scraper.cabal  stack.yaml
src/Notification/: Notifier.hs  SlackBot.hs
src/Scrapers/: RobAllen.hs
src/Utils/: Bass.hs
