name:                scraper
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/scraper#readme
license:             BSD3
license-file:        LICENSE
author:              George Granberry
maintainer:          george.granberry@gmail.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Notifier
  main-is:             Notification/Notifier.hs
  other-modules:       Scrapers.RobAllen, Utils.Bass
  build-depends:       base
                     , scalpel == 0.5.*
                     , curl 
                     , text  
  hs-source-dirs: src
  default-language:    Haskell2010


executable SlackBot
  main-is:             Notification/SlackBot.hs
  other-modules:       Scrapers.RobAllen, Utils.Bass
  build-depends:       base
                     , scalpel == 0.5.*
                     , curl
                     , text
                     , warp
                     , mtl
                     , wreq
                     , linklater
  hs-source-dirs: src
  default-language:    Haskell2010
